# catris

./: .editorconfig  .gitignore  Cargo.toml  CatrisLauncher.bat  README.md  backup.sh  catris-client.sh  catris-nginx-site  catris.py  catris.service  deploy1.sh  deploy2.sh  fuzzer.py  index.html  local-playing.md  multiplayer-tester.py  plan.txt  pyproject.toml  requirements-dev.txt  ring.py  rtetris.py  vt52-notes  wsclient.py  wsclient.sh
.github/workflows/: github_actions.yml
catris/: __main__.py  ansi.py  compat.py  connections.py  games.py  high_scores.py  lobby.py  player.py  server_and_client.py  squares.py  views.py
catris/games/: __init__.py  bottle.py  game_base_class.py  ring.py  traditional.py
src/: ansi.rs  blocks.rs  client.rs  connection.rs  escapes.rs  game.rs  game_logic.rs  game_logic_base.rs  game_wrapper.rs  high_scores.rs  ingame_ui.rs  ip_tracker.rs  lobby.rs  logic_base.rs  main.rs  player.rs  render.rs  views.rs
src/game_logic/: blocks.rs  game.rs  mod.rs  player.rs  test.rs
src/modes/: mod.rs  traditional.rs
web-ui/: .eslintrc.json  index.html  javascript.js  script.js  style.css
